# arcxp-interview

./: .gitignore  README.md  pyproject.toml
athena-queries/: average_trip_distance_by_pickup_borough.sql  average_trip_duration_by_dropoff_borough.sql  boroughs_with_highest_revenue_per_trip_and_vehicle.sql  total_number_trips_by_borough_and_month.sql
aws-glue-jobs/scripts/data-transformation/: tlc-trip-data-etl-transformation-step.py
aws-lambda/scripts/start-glue-job-etl-function/: main.py
notebooks/: data_exploration.ipynb  pydeequ_locally.py
